--- a/.github/workflows/tag-version.yml
+++ b/.github/workflows/tag-version.yml
@@ -17,4 +17,4 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         DEFAULT_BUMP: patch
-        WITH_V: true
+        WITH_V: false
