--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,30 +1,40 @@
-name: Tests CI
+name: CI
 
 on:
   push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
-  build:
+  tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         emacs-version:
-          - emacs-25-1
-          - emacs-26-1
-          - emacs-26-3
+          - 26.1
+          - 26.2
+          - 26.3
+          - 27.1
+          - snapshot
+
     steps:
-    - name: install nix
-      uses: cachix/install-nix-action@v5
-    - name: install cachix
-      run: nix-env -iA cachix -f https://cachix.org/api/v1/install
-    - name: enable cachix for emacs-ci
-      run: cachix use emacs-ci
-    - name: check if nix is installed
-      run: nix-env --version
     - uses: actions/checkout@v1
-    - run: nix-channel --add https://github.com/purcell/nix-emacs-ci/archive/master.tar.gz emacs-ci
-    - run: nix-channel --update
+
+    - uses: actions/setup-python@v1.1.1
+      with:
+        python-version: '3.6'
+        architecture: 'x64'
+
+    - uses: purcell/setup-emacs@master
+      with:
+        version: ${{ matrix.emacs-version }}
+
+    - uses: conao3/setup-cask@master
+      with:
+        version: 0.8.4
+
     - name: Run tests
-      run: |
-        set -e
-        make EMACS_VERSION="${{ matrix.emacs-version }}" test-ci
+      run: 'make ci'
